--- a/scss/phytoplankton-core/base/_helpers.scss
+++ b/scss/phytoplankton-core/base/_helpers.scss
@@ -63,17 +63,20 @@ img {
 		content: "";
 		display: block;
 		height: 100%;
-		left: 0;
-		position: absolute;
-		top: 0;
+		// left: 0;
+		position: fixed;
+		// top: 0;
 		width: 100%;
 		z-index: 1;
+		@media screen and (min-width: 700px) {
+			display: none;
+		}
 	}
 }
 
 .is-locked {
-	height: 100%;
-	overflow: hidden;
-	position: fixed;
-	width: 100%;
+	// height: 100%;
+	// overflow: hidden;
+	// position: fixed;
+	// width: 100%;
 }
